updating landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <label for="click" class="mainicon">
                 <div class="menu">
-                    <i class='fas fa-bars' ></i>
+                    <i class='fas fa-bars'></i>
                 </div>
             </label>
             <ul>
@@ -37,7 +37,7 @@
 
     <section class="container">
         <div class="main">
-            <div class="detail"><!---Sarah -->
+            <div class="detail">
                 <h3>Hi, It's Me</h3>
                 <h1>I'm <span style="color:#fb8c00;">Sarah</span></h1>
                 <p>I'm a professional Web Developer. Our Main Goal to help & Satisficed the Local & Global Clients by web development solutions
